# correspondence

./: .gitignore  README.md  correspondence.m  cylinderMesh.m  genHumanData.m  genSawyerData.m  genYumiData.m  parseROSBag.m  validation.m
DAE/: CMakeLists.txt  DAEParserTest.m  Human.m
DAE/mex/: parseDAEMex.lib  parseDAEMex.mexw64
DAE/parser/: CMakeLists.txt  globals.h  parseDAE.cpp  parseDAEMex.cpp  parseDAETest.cpp  struct_types.h
DecoMR/: .gitignore  DecoMR.m  DecoMRTest.m  deco_mr.py  demo.py  requirements.txt  setEnv.bat
DecoMR/models/: dense_cnn.py  dmr.py  layers.py  smpl.py
DensePose/: .gitignore  DensePose.m  DensePoseTest.m  apply_net_live.py  debugImg.npy  dense_pose.py  free_globals.py  inds_human.mat  inds_yumi.mat  main.py  requirements.txt  setup.py
DensePose/DensePoseData/: get_densepose_uv.sh
DensePose/configs/quick_schedules/: densepose_rcnn_R_50_FPN_TTA_inference_acc_test.yaml  densepose_rcnn_R_50_FPN_inference_acc_test.yaml
DensePose/kdtree/toolbox/: kdtree_ball_query.mexw64  kdtree_build.mexw64  (+6 more)
Sawyer/: Robot.m  TestSawyer.m  obj.mat
Sawyer/cpp/: .gitignore
Sawyer/cpp/objLoaderMex/: CMakeLists.txt
Sawyer/mex/: object_loader.mexw64  robot_mex.mexw64
Yumi/: Robot.m  TestYumi.m  obj.mat
Yumi/cpp/: CMakeLists.txt
Yumi/cpp/robotMex/: CMakeLists.txt  robot_mex.cpp
Yumi/mex/: object_loader.lib  object_loader.mexw64  robot_mex.lib  robot_mex.mexw64
correspondenceNet/: CorrespondenceNet.m  dlnets_inds.mat  dlnets_indssawyer.mat  dlnetssawyer.mat  inds_human.mat  inds_sawyer.mat  inds_yumi.mat
data/: D.mat  q.mat  trajectoryArmHumanPointsSegsXYZ.mat  trajectoryArmRobotPointsSegsXYZ.mat  trajectoryArmsawyerPointsSegsXYZ.mat  trajectoryArmyumiPointsSegsXYZ.mat
efficientdet-d0/: EfficientNet.m  d0Test.m  efficientDetD0_predict_mex.mexw64
efficientdet-d0/pretrained-efficientdet-d0/: codegenEfficientDetD0.m
openPose/: EstimateBodyPoseUsingDeepLearningExample.mlx  OpenPose.m  openPoseTest.m
remesh/: BasisFuncs.m  ConvertPathCoordinates.m  ConvertXYZCoordinates.m  IPCR.m  IPCR1.m  IPCR2.m  IPCRRadial.m  getHumanVerts.m  getRobotVerts.m  resampleMesh.m  rodrigues_rotn_formula.m
render/: ZBufferRenderTest.asv  ZBufferRenderTest.m  compile.m  getMeanNormals.prj  getMeanNormals_mex.mexw64  getQuadTree.m  getQuadTree.prj  getQuadTree_mex.mexw64  render.m  renderZBuffer.m  renderZBuffer_mex.mexw64
search/: search.m  testSearch.m
search/pq/: .gitignore  compile.m  pq_create.mexw64  pq_delete.mexw64  pq_demo.m  pq_pop.mexw64  pq_push.cpp  pq_push.mexw64  pq_size.mexw64  pq_top.mexw64
utils/: GlobalStruct.m  MatrixLayer.m  MeanLayer.m  SparseLinearLayer.m  SplitLayer.m  correspondenceGradients.m  modelGradients.m
(+133 files in other folders)
